--- a/site/package.json
+++ b/site/package.json
@@ -11,10 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "express": "^4.17.1",
-    "mysql2": "^3.9.4",
+    "mssql": "^7.1.3",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
