--- a/site/.env.dev
+++ b/site/.env.dev
@@ -3,7 +3,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE='Naruto'
-DB_USER='Macari'
+DB_USER='root'
 DB_PASSWORD='Macareno11?'
 DB_PORT=3306
 
